# Programmentwurf

./: CMakeLists.txt  Test.c  a.out  korrekciona.c
Programmentwurf/: CMakeLists.txt  run_cmake.sh
Programmentwurf/include/: developer.h  developer_group.h
Programmentwurf/src/: developer.c  developer_group.c  devoloper.c  devoloper_group.c  main.c
